--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -6,6 +6,8 @@
     location: Melbourne
     talks: 
       - name: The Power ⚡️ and Responsibility 😓 of Unicode Adoption ✨
+        slides: 2017_02_RubyConfAU
+        twitter: https://twitter.com/sailorhg/status/829559265949999104
 
 - conference:
     name: linux.conf.au
