--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,8 +1,38 @@
 - conference:
+    name: PyCon US
+    link: https://us.pycon.org/2017/
+    date: 2017-05-01
+    upcoming: true
+    location: Portland, OR
+    talks: 
+        - name: Snek in the Browser
+          link: https://us.pycon.org/2017/schedule/presentation/51/
+
+- conference:
+    name: OSCON
+    link: https://conferences.oreilly.com/oscon/oscon-tx
+    upcoming: true
+    date: 2017-05-11
+    location: Austin, TX
+    talks: 
+      - name: The Power ⚡️ and Responsibility 😓 of Unicode Adoption ✨
+        link: https://conferences.oreilly.com/oscon/oscon-tx
+
+- conference:
+    name: CrikeyCon
+    link: https://www.crikeycon.com/
+    date: 2017-02-25
+    upcoming: true
+    location: Brisbane
+    talks:
+        - name: 🔐 + 😈 => 💥
+        
+
+
+- conference:
     name: RubyConf AU
     link: http://www.rubyconf.org.au/2017
     date: 2017-02-09 
-    type: upcoming
     location: Melbourne
     talks: 
       - name: The Power ⚡️ and Responsibility 😓 of Unicode Adoption ✨
