--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -46,6 +46,7 @@
       - name: The Power ⚡️ and Responsibility 😓 of Unicode Adoption ✨
         slides: 2017_02_RubyConfAU
         twitter: https://twitter.com/sailorhg/status/829559265949999104
+        video: https://www.youtube.com/watch?v=Acf14xTjnFA
 
 - conference:
     name: linux.conf.au
