--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -18,14 +18,16 @@
 #     - name: The Power ⚡️ and Responsibility 😓 of Unicode Adoption ✨
 #       link: https://conferences.oreilly.com/oscon/oscon-tx
 #
-#- conference:
-#    name: CrikeyCon
-#    link: https://www.crikeycon.com/
-#    date: 2017-02-25
-#    upcoming: true
-#    location: Brisbane
-#    talks:
-#        - name: 🔐 + 😈 => 💥
+- conference:
+    name: CrikeyCon
+    link: https://www.crikeycon.com/
+    date: 2017-02-25
+    upcoming: true
+    location: Brisbane
+    talks:
+        - name: 🔐 + 😈 => 💥
+          slides: 2017_02_CrikeyCon
+          twitter: https://twitter.com/attacus_au/status/835362125967044609
         
 - conference:
     name: Sydney DevOps
