I'm speaking at oscon :3

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -2,7 +2,6 @@
 #    name: PyCon US
 #    link: https://us.pycon.org/2017/
 #    date: 2017-05-01
-#    upcoming: true
 #    location: Portland, OR
 #    talks: 
 #        - name: Snek in the Browser
@@ -11,13 +10,22 @@
 #- conference:
 #    name: OSCON
 #    link: https://conferences.oreilly.com/oscon/oscon-tx
-#    upcoming: true
 #    date: 2017-05-11
 #    location: Austin, TX
 #    talks: 
 #     - name: The Power ⚡️ and Responsibility 😓 of Unicode Adoption ✨
-#       link: https://conferences.oreilly.com/oscon/oscon-tx
+#       link: https://conferences.oreilly.com/oscon/oscon-tx/public/schedule/detail/56370
 #
+
+- conference:
+    name: YOW! West
+    link: http://west.yowconference.com.au/
+    date: 2017-05-03
+    location: Perth
+    talks: 
+      - name: The Power ⚡️ and Responsibility 😓 of Unicode Adoption ✨
+      link: http://west.yowconference.com.au/speakers/katie-mclaughlin/
+      slides: 2017_05_YOWest
 
 - conference:
     name: SyPy
@@ -33,7 +41,6 @@
     name: CrikeyCon
     link: https://www.crikeycon.com/
     date: 2017-02-25
-    upcoming: true
     location: Brisbane
     talks:
         - name: 🔐 + 😈 => 💥
