--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -17,6 +17,16 @@
 #       link: https://conferences.oreilly.com/oscon/oscon-tx/public/schedule/detail/56370
 #
 
+
+- conference:
+    name: Community Leadership Summit
+    link: http://web.archive.org/web/20170509012748/http://www.communityleadershipsummit.com/
+    date: 2017-05-7
+    location: Austin, TX
+    talks: 
+        - name: All Contributions Welcome
+          slides: 2017_05_CLS
+
 - conference:
     name: YOW! West
     link: http://west.yowconference.com.au/
