--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -7,15 +7,15 @@
 #        - name: Snek in the Browser
 #          link: https://us.pycon.org/2017/schedule/presentation/51/
 #
-#- conference:
-#    name: OSCON
-#    link: https://conferences.oreilly.com/oscon/oscon-tx
-#    date: 2017-05-11
-#    location: Austin, TX
-#    talks: 
-#     - name: The Power ⚡️ and Responsibility 😓 of Unicode Adoption ✨
-#       link: https://conferences.oreilly.com/oscon/oscon-tx/public/schedule/detail/56370
-#
+- conference:
+    name: OSCON
+    link: https://conferences.oreilly.com/oscon/oscon-tx
+    date: 2017-05-11
+    location: Austin, TX
+    talks: 
+     - name: The Power and Responsibility of Unicode Adoption
+       link: https://conferences.oreilly.com/oscon/oscon-tx/public/schedule/detail/56370
+       slides: 2017_05_OSCON
 
 
 - conference:
