--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -13,6 +13,7 @@
           type: Lightning Talk
           slides: 2017_05_PyConUS_EmojiArch
           twitter: https://twitter.com/phildini/status/865731765876383744
+          transcript: http://draft.sx/2e9e2c261943fce1e1b24eaee4e776a5
           video: https://youtu.be/tK6ZIf0yYhs?t=39
 
 - conference:
