--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -68,6 +68,7 @@
     talks: 
       - name: The Power ⚡️ and Responsibility 😓 of Unicode Adoption ✨
         link: http://west.yowconference.com.au/speakers/katie-mclaughlin/
+        video: https://www.youtube.com/watch?v=RUApj8z0UGE
         slides: 2017_05_YOWest
         twitter: https://twitter.com/weberdc/status/859680578789978112
 
