--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -8,7 +8,8 @@
           link: https://github.com/glasnt/millennial
           twitter: https://twitter.com/limedaring/status/897190563685978112
         - name: The Power ⚡️ and Responsibility 😓 of Unicode Adoption ✨
-          link: 2017_08_DjangoConUS
+          slides: 2017_08_DjangoConUS
+          twitter: https://twitter.com/willyhakim/status/897588082089705472
 
 - conference:
     name: PyCon AU
