--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,4 +1,15 @@
 - conference:
+    name: GitHub Constellation
+    link: http://githubconstellation.com/sydney/
+    date: 25-AUG-2017
+    location: Sydney, Australia
+    talks: 
+        - name: ...Bees?
+        - link: http://githubconstellation.com/sydney/#bees
+        - slides: 2017_10_Constellation/Bees.podium
+        - twitter: https://twitter.com/developerjack/status/923120201985437696
+
+- conference:
     name: DjangoCon US
     link: https://2017.djangocon.us/
     date: 10-AUG-2017
