--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -9,6 +9,8 @@
           slides: 2018_01_NDCLondon
           link: https://ndc-london.com/talk/the-power-and-responsibility-of-unicode-adoption/
           twitter: https://twitter.com/azadehkhojandi/status/953642171051200513
+        - name: A soliloquy of wat
+          slides: https://github.com/glasnt/talks/tree/gh-pages/2018_01_NDCLondon_Lightning
 
 
 - conference:
