--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -11,6 +11,7 @@
           twitter: https://twitter.com/azadehkhojandi/status/953642171051200513
         - name: A soliloquy of wat
           slides: https://github.com/glasnt/talks/tree/gh-pages/2018_01_NDCLondon_Lightning
+          twitter: https://twitter.com/OhMyCrabcakes/status/954117024132816897
 
 
 - conference:
