--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,3 +1,14 @@
+- conference: 
+    name: linux.conf.au
+    link: https://linux.conf.au/
+    date: 23-JAN-2018
+    location: Sydney, Australia
+    talks: 
+        - name: A Right Stitchup
+          link: https://rego.linux.conf.au/schedule/presentation/141/
+          slides: 2018_01_LCAArtTech/
+          twitter: https://twitter.com/adambrenecki/status/955687634092810240
+
 
 - conference:
     name: NDC London
