--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -26,6 +26,7 @@
           slides: 2018_01_NDCLondon
           link: https://ndc-london.com/talk/the-power-and-responsibility-of-unicode-adoption/
           twitter: https://twitter.com/azadehkhojandi/status/953642171051200513
+          video: https://www.youtube.com/watch?v=HO0UKfx1LLA
         - name: A soliloquy of wat
           slides: https://github.com/glasnt/talks/tree/gh-pages/2018_01_NDCLondon_Lightning
           twitter: https://twitter.com/OhMyCrabcakes/status/954117024132816897
