Add pycontw video

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -7,6 +7,7 @@
       - name: Communication strategies beyond the Basic Multilingual Plane 
         link: https://tw.pycon.org/2018/en-us/events/keynotes/
         type: Keynote
+        video: https://www.youtube.com/watch?v=EfzsffnHnCM
         slides: https://glasnt.com/talks/2018_06_PyConTW
         twitter: https://twitter.com/adrianliaw2000/status/1002746425526980608
 
