--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -87,6 +87,7 @@
         slides: https://github.com/glasnt/talks/tree/gh-pages/2018_03_RubyConfAU
         twitter: https://twitter.com/JessRudder/status/971552800495697920
         feedback: https://alainakafkes.github.io/chronicles/2018/03/11/rubyconf-au.html
+        video: https://www.youtube.com/watch?v=6FS1Hy8jhfQ
 
 - conference:
     name: Hacker Public Radio
