--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -17,6 +17,7 @@
           slides: 2018_10_DjangoConUS_Emoji/index.html
           twitter: https://twitter.com/ChloeCondon/status/1052256899557613568
           photo: https://www.flickr.com/photos/144080672@N05/44722894455/in/datetaken-public/
+          video: https://www.youtube.com/watch?v=3iFG9nTSyeo&t=830s
         - name: "ORM: The Sequel"
           slides: 2018_10_DjangoConUS.podium
           twitter: https://twitter.com/treyhunner/status/1052688137250516992
