--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,5 +1,15 @@
+- conference:
+    name: FFS Conf Down Under
+    date: 2019-02-02
+    link: https://ffsconfdownunder.com/
+    talks: 
+        - name: FFS You are a programmer, no matter the language
+          link: https://ffsconfdownunder.com/rants/
+          slides: 2019_02_FFSConf
+          
+
 - conference: 
-    name: Docs Down Under
+    name: Docs Down Under, linux.conf.au
     date: 2019-01-22
     link: https://linux.conf.au/programme/miniconfs/docs/
     talks: 
