--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -2,16 +2,17 @@
     name: FFS Conf Down Under
     date: 2019-02-02
     link: https://ffsconfdownunder.com/
+    location: Melbourne
     talks: 
         - name: FFS You are a programmer, no matter the language
           link: https://ffsconfdownunder.com/rants/
-          slides: 2019_02_FFSConf
-          
+          slides: https://github.com/glasnt/talks/tree/gh-pages/2019_02_FFSConf
 
 - conference: 
     name: Docs Down Under, linux.conf.au
     date: 2019-01-22
     link: https://linux.conf.au/programme/miniconfs/docs/
+    location: Christchurch, NZ
     talks: 
         - name: Being kind to 3am you
           link: https://linux.conf.au/schedule/presentation/230/
@@ -23,6 +24,7 @@
     name: All Things Open
     date: 2018-10-22
     link: https://2018.allthingsopen.org
+    location: Raleigh, NC
     talks:
         - name: Turning wat into why
           link: https://2018.allthingsopen.org/talk/turning-wat-into-why/
@@ -33,6 +35,7 @@
     name: DjangoCon US 2018
     date: 2018-10-15
     link: https://2018.djangocon.us/
+    location: San Diego, CA
     talks:
         - type: Lightning Talk
           name: Emoji Story Time with Katie
