Update talk types

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -11,10 +11,12 @@
          video: https://www.youtube.com/watch?v=Fllch-WwzWM
        - name: Wrangling Enthusiastic Hordes (Maintainer's Summit)
          link: https://us.pycon.org/2019/hatchery/maintainers/
+         type: Lightning Talk
          slides: 2019_05_MaintainersSummit
        - name: I am the very model of a PyCon AU CFP
          video: https://youtu.be/bnxxoTx9Sko?t=1856
          twitter: https://twitter.com/glasnt/status/1125027351996313600
+         type: Spruik
 
 - conference:
     name: PyCascades
