--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -49,6 +49,7 @@
           link: https://2019.pycascades.com/talks/turning-wat-into-why/
           slides: 2019_02_PyCascades.podium
           twitter: https://twitter.com/cfactoid/status/1099374287708860416
+          video: https://www.youtube.com/watch?v=1lVBSDcYhw0
 
 - conference:
     name: FFS Conf Down Under
