--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,4 +1,16 @@
 - conference:
+    name: YOW! Perth
+    location: Perth, Australia
+    date: 2019-09-04
+    link: https://yowconference.com/perth
+    talks:
+       - name: Turning 'wat' into 'why'
+         link: https://yowconference.com/talks/katie-mclaughlin/yow-perth-2019/turning-wat-into-why-10456
+         resources: https://glasnt.com/wat
+         slides: 2019_09_YOWPerth.podium
+         twitter: https://twitter.com/MichelePlayfair/status/1169110899296104448
+
+- conference:
     name: Kiwi PyCon X
     date: 2019-08-23
     location: Wellington, NZ
